# crucible-mvp

./: Cargo.toml  Justfile  README.md  justfile  my_linker.sh
client/: Cargo.toml
client/crates/renderer/: Cargo.toml
client/crates/renderer/examples/: simple.rs
client/crates/renderer/src/: lib.rs  texture.rs
client/crates/renderer/src/shaders/: texture.wgsl
client/crates/renderer/src/utils/: arena.rs  blit.rs  crevice.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/app/: mod.rs  run_loop.rs
crates/api/src/base/: log.rs  mod.rs  run_loop.rs
crates/api/src/gfx/: color.rs  texture.rs
crates/client/: Cargo.toml
crates/client/src/: app.rs  main.rs
crates/client/src/runtime/: base.rs  log.rs  main_loop.rs  mod.rs  renderer.rs
crates/client/src/utils/: arena.rs  memory.rs
crates/demo-game/: Cargo.toml
crates/demo-game/src/: main.rs
crates/renderer/examples/: simple.rs
crates/renderer/src/: lib.rs  texture.rs
guest/crucible/: Cargo.toml
guest/crucible-abi/: Cargo.toml
guest/crucible-abi/src/: gpu.rs  lib.rs  math.rs  network.rs  shell.rs
guest/crucible/src/: lib.rs
guest/crucible/src/app/: run_loop.rs
guest/crucible/src/base/: env.rs  ffi.rs  logging.rs  mod.rs  run_loop.rs  task.rs
guest/crucible/src/gfx/: color.rs  mod.rs  model.rs  rect.rs  texture.rs  voxel.rs
guest/crucible/src/net/: client.rs
guest/crucible/src/shell/: socket.rs
guest/crucible/src/window/: app.rs  defs.rs  keyboard.rs  mod.rs  run_loop.rs
guest/cruise/: Cargo.toml
guest/cruise/src/: lib.rs
guest/cruise/src/base/: mod.rs  run_loop.rs  transform.rs
guest/cruise/src/utils/: auto_mut.rs  mod.rs
guest/demo-game/: Cargo.toml
guest/demo-game/src/: main.rs
host/: Cargo.toml
host/client/: Cargo.toml
host/client/src/: app.rs  main.rs
host/client/src/bindings/: env.rs  gfx.rs  mod.rs  network.rs
host/client/src/runtime/: base.rs  ffi.rs  main_loop.rs  mod.rs  renderer.rs  time.rs
host/client/src/services/: mod.rs  network.rs  window.rs
host/client/src/utils/: arena.rs  mod.rs  promise.rs
host/client/src/utils/sync/: mod.rs  promise.rs  rendezvous.rs
host/client/src/utils/winit/: mod.rs  platform.rs  run_loop.rs
host/crates/client/: Cargo.toml
host/crates/renderer/examples/: simple.rs
host/crates/renderer/src/: lib.rs  texture.rs
host/crates/renderer/src/utils/: align.rs  blit.rs
host/protocol/: Cargo.toml
host/protocol/src/: codec.rs  content.rs  dedicated.rs  game.rs  lib.rs  party.rs
host/renderer/examples/: simple.rs
host/renderer/src/: lib.rs
host/server/: Cargo.toml
host/server/src/: app.rs  main.rs  worker.rs
host/shared/: Cargo.toml
host/shared/src/: lib.rs
host/shared/src/guest/: arena.rs  background.rs  mod.rs  promise.rs
host/shared/src/lang/: background.rs  delegate.rs  mod.rs
host/shared/src/runtime/: ffi.rs  log.rs  mod.rs  time.rs
host/shared/src/utils/wasm/: memory_ext.rs  mod.rs  store.rs  wasmtime_ext.rs
host/wasmall/: Cargo.toml
host/wasmall/src/: coder.rs  reloc.rs  splitter.rs  util.rs
host/wasmlink-wasmtime/: Cargo.toml
host/wasmlink-wasmtime/src/: lib.rs
shared/crucible-abi/: Cargo.toml
shared/crucible-abi/src/: env.rs  gpu.rs  lib.rs  math.rs  window.rs
shared/wasmlink/: Cargo.toml
shared/wasmlink/examples/: whee.rs
shared/wasmlink/src/: lib.rs
src/cafs/: Cargo.toml
src/cafs/src/: lib.rs  util.rs
src/guest/: Cargo.toml
src/guest/src/: main.rs
src/host/: Cargo.toml
src/host/src/: lib.rs  main.rs
src/host/src/rt/: cafs.rs  marshal.rs  mod.rs  splitter.rs
src/host/src/util/: arc_map.rs  extension.rs  file.rs  io.rs  map.rs  mod.rs  sha.rs
src/marshal/: Cargo.toml
src/marshal-host/: Cargo.toml
src/marshal-host/src/: lib.rs
src/marshal/src/: lib.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/wasmall/: Cargo.toml
src/wasmall/examples/: split.rs
src/wasmall/src/: coder.rs  lib.rs  main.rs  reloc.rs  splitter.rs  util.rs
userland/: Cargo.toml
userland/crates/crucible/src/base/: mod.rs
userland/crates/crucible/src/gfx/: model.rs  texture.rs
userland/crates/demo-game/: Cargo.toml
utils/glacee/: Cargo.toml
utils/glacee/src/: lib.rs
utils/push-fastcdc/: Cargo.toml
utils/push-fastcdc/benches/: basic.rs
utils/push-fastcdc/src/: lib.rs  tests.rs
utils/renderer/: Cargo.toml
utils/renderer-experimental/: Cargo.toml
utils/renderer-experimental/examples/: voxel.rs
utils/renderer-experimental/src/: driver.rs  lib.rs  structures.rs
utils/renderer-experimental/src/utils/: assets.rs  bits.rs  mod.rs  wgpu.rs
utils/renderer/examples/: simple.rs
utils/renderer/src/: lib.rs  texture.rs
utils/voxel/: Cargo.toml
utils/voxel/examples/: voxel.rs
utils/voxel/src/: assets.rs  culling.rs  lib.rs
utils/voxel/src/utils/: hash.rs
utils/wasmall/: Cargo.toml
utils/wasmall-new/: Cargo.toml
utils/wasmall-new/examples/: roundtrip_new.rs
utils/wasmall-new/src/: encode.rs  format.rs  lib.rs  split.rs  utils.rs
utils/wasmall/examples/: compare.rs  roundtrip.rs
utils/wasmall/src/: encode.rs  format.rs  util.rs
utils/wasmlink/: Cargo.toml
utils/wasmlink-wasmtime/: Cargo.toml
utils/wasmlink-wasmtime/src/: lib.rs
utils/wasmlink/src/: aggregate.rs  base.rs  fundamental.rs  lib.rs  port.rs  utils.rs
