[workspace]
resolver = "2"
members = [
    "guest/crucible-abi",
    "guest/crucible",
    "guest/demo-game",
    "host/client",
    "host/protocol",
    "host/server",
    "utils/glacee",
    "utils/renderer",
    "utils/wasmlink-wasmtime",
    "utils/wasmlink",
    "utils/wasmall",
    "utils/push-fastcdc",
]

[workspace.dependencies]
crucible = { path = "guest/crucible" }
crucible-abi = { path = "guest/crucible-abi" }
crucible-protocol = { path = "host/protocol" }
crucible-renderer = { path = "utils/renderer" }
push-fastcdc = { path = "utils/push-fastcdc" }
wasmall = { path = "utils/wasmall" }
wasmlink = { path = "utils/wasmlink" }
wasmlink-wasmtime = { path = "utils/wasmlink-wasmtime" }

[workspace.dependencies.arid]
git = "https://github.com/Radbuglet/arid.git"
rev = "3e9c712b4f9b5a8fb1920576e8374e996826e65d"

[workspace.dependencies.arid-entity]
git = "https://github.com/Radbuglet/arid.git"
rev = "3e9c712b4f9b5a8fb1920576e8374e996826e65d"

[workspace.dependencies.quinn]
version = "0.11.8"
default-features = false
# Use `aws-lc-rs` because that's what `librice` favors.
#  We don't use the `platform-verifier` feature directly because we instantiate the
#  `rustls-platform-verifier` verifier directly.
features = ["bloom", "log", "runtime-tokio", "rustls-aws-lc-rs"]

[profile.dev.package."*"]
opt-level = 2
