[workspace]
resolver = "2"
members = [
    "guest/crucible-abi",
    "guest/crucible",
    "guest/demo-game",
    "host/client",
    "host/protocol",
    "host/server",
    "host/shared",
    "utils/glacee",
    "utils/push-fastcdc",
    "utils/renderer-experimental",
    "utils/renderer",
    "utils/wasmall",
    "utils/wasmlink-wasmtime",
    "utils/wasmlink",
]

[workspace.dependencies]
crucible = { path = "guest/crucible" }
crucible-abi = { path = "guest/crucible-abi" }
crucible-protocol = { path = "host/protocol" }
crucible-renderer = { path = "utils/renderer" }
push-fastcdc = { path = "utils/push-fastcdc" }
wasmall = { path = "utils/wasmall" }
wasmlink = { path = "utils/wasmlink" }
wasmlink-wasmtime = { path = "utils/wasmlink-wasmtime" }
wgpu = "26.0.1"

[workspace.dependencies.arid]
git = "https://github.com/Radbuglet/arid.git"
rev = "46448a8f0938af55804daf527ebe511ab8527fdd"

[workspace.dependencies.arid-entity]
git = "https://github.com/Radbuglet/arid.git"
rev = "46448a8f0938af55804daf527ebe511ab8527fdd"

[workspace.dependencies.quinn]
version = "0.11.8"
default-features = false
# Use `aws-lc-rs` because that's what `librice` favors.
#  We don't use the `platform-verifier` feature directly because we instantiate the
#  `rustls-platform-verifier` verifier directly.
features = ["bloom", "log", "runtime-smol", "rustls-aws-lc-rs"]

[profile.dev.package."*"]
opt-level = 2
