[package]
name = "crucible"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
blake3 = "1.8.2"
bytemuck = { version = "1.23.1", features = ["min_const_generics", "derive"] }
crucible-abi.workspace = true
enum-ordinalize = "4.3.0"
futures = "0.3.31"
glam = { version = "0.30.4", features = ["bytemuck"] }
image = { version = "0.25.6", default-features = false }
scopeguard = "1.2.0"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasmlink.workspace = true
