[package]
name = "crucible-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arid-entity.workspace = true
arid.workspace = true
crucible-abi.workspace = true
crucible-protocol.workspace = true
crucible-renderer.workspace = true
derive-where = "1.5.0"
futures = "0.3.31"
glam = { version = "0.30.4", features = ["bytemuck"] }
late-struct = "0.1.0"
quinn.workspace = true
raw-window-handle = "0.6.2"
rustc-hash = "2.1.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wasmlink-wasmtime.workspace = true
wasmlink.workspace = true
wasmtime = "35.0.0"
wgpu = "25.0.2"
winit = "0.30.11"
rustls-platform-verifier = "0.6.1"
smallbox = "0.8.8"
blake3 = "1.8.2"
bytemuck = "1.23.2"
thiserror = "2.0.16"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.1"
objc2-quartz-core = "0.3.1"
