[package]
name = "crucible-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
blake3 = { version = "1.8.2", features = ["serde"] }
futures-util = { version = "0.3.31", features = ["sink"] }
postcard = "1.1.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1.41"
