[package]
name = "crucible-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
blake3 = { version = "1.8.2", features = ["serde"] }
crucible-protocol.workspace = true
quinn.workspace = true
rcgen = "0.14.3"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wasmall.workspace = true
