[package]
name = "crucible-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
blake3 = "1.5.0"
bytemuck = "1.14.1"
color-backtrace = "0.6.1"
crucible-shared = { version = "0.1.0", path = "../shared", features = ["host"] }
drop_guard = "0.3.0"
env_logger = "0.11.1"
generic-array = "1.0.0"
log = "0.4.20"
rustc-hash = "1.1.0"
sled = "0.34.7"
wasm-encoder = { version = "0.41.0", features = ["wasmparser"] }
wasmparser = "0.121.0"
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"
zip = "0.6.6"
