[package]
name = "crucible-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-tempfile = "0.5.0"
blake3 = "1.5.0"
bytemuck = "1.14.1"
color-backtrace = "0.6.1"
crucible-shared = { version = "0.1.0", path = "../shared", features = ["host"] }
derive-where = "1.2.7"
env_logger = "0.11.1"
generic-array = "1.0.0"
hashbrown = "0.14.3"
log = "0.4.20"
rustc-hash = "1.1.0"
sled = "0.34.7"
tokio = { version = "1.36.0", features = ["full"] }
wasm-encoder = { version = "0.41.0", features = ["wasmparser"] }
wasmparser = "0.121.0"
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"
zip = "0.6.6"
