[package]
name = "crucible-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["min_const_generics"] }
crevice = "0.18.0"
glam = "0.30.4"
rustc-hash = "2.1.1"
wgpu.workspace = true

[dev-dependencies]
async-io = "2.6.0"
image = "0.25.6"
winit = "0.30.11"
